--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
     <body>
         <div class="header"></div>
         <div class="wrapper">
-            <div class="squares">
-                <div class="square"></div>
-                <div class="square"></div>
+            <div class="left_box">
+                <div class="squares">
+                    <div class="square"></div>
+                    <div class="square"></div>
+                </div>
             </div>
             <div class="middle">
                 <div class="equal">
@@ -20,7 +22,9 @@
                 </div>
                 <div class="circle"></div>
             </div>
-            <div class="rectangle">ABC</div>
+            <div class="right_box">
+                <div class="rectangle">ABC</div>
+            </div>
         </div>
     </body>
 </html>
