fixed equal symbol and circle, changed divs class name and made css working

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
             </div>
             <div class="middle">
                 <div class="equal">
-                    <div class="eq"></div>
-                    <div class="eq"></div>
+                    <div class="eq1"></div>
+                    <div class="eq2"></div>
                 </div>
                 <div class="circle"></div>
             </div>
